--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -175,21 +175,21 @@ services:
       - ./volumes/app/storage:/app/api/storage
 
   # Frontend web application.
-  web:
-    image: langgenius/dify-web:0.3.14
-    restart: always
-    environment:
-      EDITION: SELF_HOSTED
-      # The base URL of console application api server, refers to the Console base URL of WEB service if console domain is
-      # different from api or web app domain.
-      # example: http://cloud.dify.ai
-      CONSOLE_API_URL: ''
-      # The URL for Web APP api server, refers to the Web App base URL of WEB service if web app domain is different from
-      # console or api domain.
-      # example: http://udify.app
-      APP_API_URL: ''
-      # The DSN for Sentry error reporting. If not set, Sentry error reporting will be disabled.
-      SENTRY_DSN: ''
+#  web:
+#    image: langgenius/dify-web:0.3.14
+#    restart: always
+#    environment:
+#      EDITION: SELF_HOSTED
+#      # The base URL of console application api server, refers to the Console base URL of WEB service if console domain is
+#      # different from api or web app domain.
+#      # example: http://cloud.dify.ai
+#      CONSOLE_API_URL: ''
+#      # The URL for Web APP api server, refers to the Web App base URL of WEB service if web app domain is different from
+#      # console or api domain.
+#      # example: http://udify.app
+#      APP_API_URL: ''
+#      # The DSN for Sentry error reporting. If not set, Sentry error reporting will be disabled.
+#      SENTRY_DSN: ''
 
   # The postgres database.
   db:
