--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -176,7 +176,7 @@ services:
 
   # Frontend web application.
   web:
-    image: dify-web
+    build: ./web
     restart: always
     environment:
       EDITION: SELF_HOSTED
