--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -177,6 +177,7 @@ services:
   # Frontend web application.
   web:
     build: ./web
+    image: dify-web
     restart: always
     environment:
       EDITION: SELF_HOSTED
