--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -187,7 +187,7 @@ services:
       # The URL for Web APP api server, refers to the Web App base URL of WEB service if web app domain is different from
       # console or api domain.
       # example: http://udify.app
-      APP_API_URL: ''
+      APP_API_URL: 'http://totalgpt.jototech.cn:8090'
       # The DSN for Sentry error reporting. If not set, Sentry error reporting will be disabled.
       SENTRY_DSN: ''
 
