--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -26,8 +26,8 @@ server {
     listen 443 ssl;
     server_name _;
     # ssl证书地址
-    ssl_certificate     cert/totalgpt.jototech.cn.pem;
-    ssl_certificate_key  cert/totalgpt.jototech.cn.key;
+    ssl_certificate     /etc/nginx/conf.d/cert/totalgpt.jototech.cn.pem;
+    ssl_certificate_key  /etc/nginx/conf.d/cert/totalgpt.jototech.cn.key;
  
     # ssl验证相关配置
     ssl_session_timeout  5m;    #缓存有效期
