--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -22,15 +22,15 @@ services:
       # The URL for Service API endpoints，refers to the base URL of the current API service if api domain is
       # different from console domain.
       # example: http://api.dify.ai
-      SERVICE_API_URL: 'http://totalgpt.jototech.cn:8090'
+      SERVICE_API_URL: 'https://totalgpt.jototech.cn:8090'
       # The URL for Web APP api server, refers to the Web App base URL of WEB service if web app domain is different from
       # console or api domain.
       # example: http://udify.app
-      APP_API_URL: 'http://totalgpt.jototech.cn:8090'
+      APP_API_URL: 'https://totalgpt.jototech.cn:8090'
       # The URL for Web APP frontend, refers to the Web App base URL of WEB service if web app domain is different from
       # console or api domain.
       # example: http://udify.app
-      APP_WEB_URL: 'http://totalgpt.jototech.cn:8090'
+      APP_WEB_URL: 'https://totalgpt.jototech.cn:8090'
       # When enabled, migrations will be executed prior to application startup and the application will start after the migrations have completed.
       MIGRATION_ENABLED: 'true'
       # The configurations of postgres database connection.
@@ -187,7 +187,7 @@ services:
       # The URL for Web APP api server, refers to the Web App base URL of WEB service if web app domain is different from
       # console or api domain.
       # example: http://udify.app
-      APP_API_URL: 'http://totalgpt.jototech.cn:8090'
+      APP_API_URL: 'https://totalgpt.jototech.cn:8090'
       # The DSN for Sentry error reporting. If not set, Sentry error reporting will be disabled.
       SENTRY_DSN: ''
 
