--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -50,8 +50,8 @@ server {
       include proxy.conf;
     }
 
-    location / {
-      proxy_pass http://web:3000;
+    location /demo {
+      proxy_pass http://demo:3001;
       include proxy.conf;
     }
 }
