--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -51,7 +51,12 @@ server {
     }
 
     location /demo {
-      proxy_pass http://demo:8000;
+      proxy_pass http://demo:80;
+      include proxy.conf;
+    }
+
+    location / {
+      proxy_pass http://web:3000;
       include proxy.conf;
     }
 }
