--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -55,6 +55,11 @@ server {
       include proxy.conf;
     }
 
+    location /assets {
+      proxy_pass http://demo:80;
+      include proxy.conf;
+    }
+
     location / {
       proxy_pass http://web:3000;
       include proxy.conf;
